Fix scroll spy bugs by tracking section visibility with Map

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -4,7 +4,7 @@ main {
 }
 
 section {
-  margin-bottom: 7rem;
+  /* margin-bottom: 3rem; */
   padding-top: 6rem;
 }
 
